# hisvg

./: .gitignore  CMakeLists.txt  README.md  build.sh
cmake/: FindHiDomLayout.cmake  FindPango.cmake
include/: hisvg-base.h  hisvg-cairo-clip.h  hisvg-cairo-draw.h  hisvg-cairo-render.h  hisvg-common.h  hisvg-css.h  hisvg-defs.h  hisvg-filter.h  hisvg-image.h  hisvg-io.h  hisvg-marker.h  hisvg-mask.h  hisvg-paint-server.h  hisvg-path.h  hisvg-private.h  hisvg-select.h  hisvg-shapes.h  hisvg-size-callback.h  hisvg-structure.h  hisvg-styles.h  hisvg-text-helper.h  hisvg-text.h  hisvg-xml.h  hisvg.h
src/: CMakeLists.txt  hisvg-base-file-util.c  hisvg-base.c  hisvg-cairo-clip.c  hisvg-cairo-draw.c  hisvg-cairo-render.c  hisvg-cairo.c  hisvg-cond.c  hisvg-css.c  hisvg-defs.c  hisvg-filter.c  hisvg-gobject.c  hisvg-handle.c  hisvg-image.c  hisvg-io.c  hisvg-marker.c  hisvg-mask.c  hisvg-paint-server.c  hisvg-path.c  hisvg-select-impl.c  hisvg-select.c  hisvg-shapes.c  hisvg-size-callback.c  hisvg-structure.c  hisvg-styles.c  hisvg-text-helper.c  hisvg-text.c  hisvg-xml.c  hisvg.pc.in
tests/: CMakeLists.txt  svg2png.c
